--- a/форма.md
+++ b/форма.md
@@ -1,8 +1,8 @@
 ```
-Создаем форму  получая от пользователя логин, пароль обозначенные атрибутом name. 
-Передаем на сервер  методом GET или POST,используя атрибут method
+Создаем форму,  получая от пользователя логин, пароль обозначенные атрибутом name. 
+Передаем на сервер  методом GET или POST, используя атрибут method
 Данные формы принимает программа-обработчик по  адресу  указанному в атрибуте action .
-```html
+```
 <form action="http://carnivora.ru/index65.php"method="GET" >
 логин:<input type="login">
 пароль:<input type="password">
