--- a/база данных.md
+++ b/база данных.md
@@ -1,2 +1,2 @@
-В панеле управления ISPmanager ->Главная -> Базы данных содаем базу данных (наименование и пароль).
+В панеле управления ISPmanager ->Главная -> Базы данных создаем базу данных (наименование и пароль).
 Выбираем ISPmanager ->Инструменты -> phpMyAdmin вносим наименование, пароль и создаем таблицу
